devices/vector/gdevpsf2.c
@@ -703,7 +703,7 @@ cff_write_Top_fdarray(cff_writer_t *pcw, gs_font_base *pbfont,
     gs_font_info_t info;
 
     cff_get_Top_info_common(pcw, pbfont, false, &info);
-    cff_write_Top_common(pcw, pbfont, false, &info);
+    cff_write_Top_common(pcw, pbfont, true, &info);
     cff_put_int(pcw, Private_size);
     cff_put_int_value(pcw, Private_offset, TOP_Private);
     if (pfname->size == 0)
